--- a/css/modal.css
+++ b/css/modal.css
@@ -142,6 +142,7 @@
   background: #6D5BD0;
   border-radius: 6px;
   width: 250px;
+  height: 40px;
   padding: 12px;
   display: flex;
   justify-content: center;
@@ -365,3 +366,11 @@
     margin-bottom: 20px;
   }
 }
+
+/*
+.photo-preview {
+  display: block;
+  width: 300px;
+  height: 300px;
+  background-color: #6D5BD0;
+} */
