--- a/css/modal.css
+++ b/css/modal.css
@@ -367,10 +367,13 @@
   }
 }
 
-/*
+
 .photo-preview {
   display: block;
-  width: 300px;
-  height: 300px;
-  background-color: #6D5BD0;
-} */
+  max-width: 300px;
+  color: red;
+  font-size: 17px;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 700;
+}
